--- a/skin/adminhtml/default/cottoncampadmin/boxes.css
+++ b/skin/adminhtml/default/cottoncampadmin/boxes.css
@@ -424,23 +424,23 @@ span.delete-file                { padding:0; }
 
 /* Form Button */
 .content-buttons.form-buttons,
-.content-header .form-buttons   { text-align:right; margin-bottom:0; }
+.content-header .form-buttons   { text-align:right; margin:-22px 1px; }
 .content-header .content-buttons-placeholder { display:inline !important; }
 .content-header .form-buttons   { float:right; }
 .content-header td.form-buttons   { float:none;  }
 .content-header .form-buttons button { margin-bottom:3px; }
 .sub-btn-set { border:1px solid #ddd; border-width:0 1px; background:url(images/sub_button_bg.gif) repeat; padding:3px 10px; text-align:right; }
 button,
-.form-button { border-width:1px;border-style:solid;border-color:#003A88;padding: 4px 12px;text-decoration: none;
-										background:none repeat scroll 0 0 black;color:#FFFFFF;font:bold 12px arial, helvetica, sans-serif;cursor:pointer; 
-										text-align:center !important;white-space:nowrap; border-radius: 10px 10px 10px 10px;}
+.form-button { border-width:1px;border-style:solid;border-color:#3a3a3a;padding: 2px 10px;text-decoration: none;
+										background:none repeat scroll 0 0 #3a3a3a;color:#FFFFFF;font:bold 12px arial, helvetica, sans-serif;cursor:pointer; 
+										text-align:center !important;white-space:nowrap; border-radius: 7px 7px 7px 7px;}
 /*button:hover                    { background:#f77c16 url(images/btn_over_bg.gif) repeat-x 0 0; }*/
 button:active                   { background:#f77c16 url(images/btn_on_bg.gif) repeat-x 0 0; }
 button span                     { line-height:1.35em; background-repeat:no-repeat; background-position:0 50%; }
 button span span                { background:none !important; padding:0 !important; margin:0 !important; display:inline !important; }
 button.delete,
 button.save,
-button.add                      { padding-left:6px; }
+button.add                      { padding-left:2px; }
 button.cancel span,
 button.delete span,
 button.save span,
@@ -652,10 +652,10 @@ div.autocomplete ul li { padding:.5em .7em; min-height:32px; cursor:pointer; tex
     padding-bottom:.25em;
     }
 .content-header table           { width:100%; }
-.content-header h3              { float:left; margin:.3em .5em 0 0; color:#004488; font-size:1.30em; line-height:1.34em; }
+.content-header h3              {margin:.3em .5em 0 0; color:#004488; font-size:1.30em; line-height:1.40em;margin-top:0.3em; }
 .content-header .head h3        { float:none; }
 .content-header .button-set     { white-space:nowrap; text-align:right; }
-.content-header .content-buttons  { white-space:nowrap!important; margin:0; }
+.content-header .content-buttons  { white-space:nowrap!important; margin:-22px 1px; }
 .content-header td.content-buttons  { width:13%;white-space:nowrap!important; margin:0; }
 .content-buttons button,
 .content-header button,
