--- a/app/design/adminhtml/default/cottoncampadmin/template/dashboard/index.phtml
+++ b/app/design/adminhtml/default/cottoncampadmin/template/dashboard/index.phtml
@@ -97,14 +97,56 @@ function toggleCal(id) {
 </div>
 <div class="dashboard-container">
     <?php echo $this->getChildHtml('store_switcher') ?>
-    <table cellspacing="25" width="100%">
+    <table>
+    	<tr>
+    		<td>
+    		<?php
+    	       $collection2= Mage::getResourceModel('sales/order');
+               echo "<br><br>The Total Order Count is :<br>".count($collection2);
+    		   echo"<br>";
+               echo "<br>The Total Customer Count is:<br>";
+               $collection = Mage::getResourceModel('customer/customer_collection');
+               echo count($collection);
+               $totalsales = Mage::getResourceModel('reports/order_collection');
+               echo "<br><br>The Total Sales Count is :<br>".count($totalsales); 
+              // $write = Mage::getSingleton('core/resource')->getConnection('core_write');
+
+               $read = Mage::getSingleton('core/resource')->getConnection('core_read');
+               $value = $read->query("select sum(base_grand_total) as currentsales from  sales_flat_order sfo where DATE_FORMAT(sfo.created_at,'%Y')=year(now()) ");
+               $row = $value->fetch();
+               echo "<br><br> The Current Year Sales is ". $row['currentsales']; 
+                               //echo "the total is " . $this->getTotals();
+               ?>
+            </td>
+    		<td><div class="dashright" style="border:1px solid #ccc;">
+                    <?php echo $this->getChildHtml('diagrams') ?>
+                    <?php if (is_array($this->getChild('diagrams')->getTabsIds())) : ?>
+                        <div id="diagram_tab_content"></div>
+                    <?php endif; ?>
+                    <div style="margin:20px;">
+                        <?php echo $this->getChildHtml('totals') ?>
+                    </div>
+                    <div style="margin:20px;">
+                        <?php echo $this->getChildHtml('grids') ?>
+                        <div id="grid_tab_content"></div>
+                    </div>
+                </div></td>
+    	</tr>
+    	<tr>
+    		<td colspan="1"><div class="lastorders">
+                    <div class="entry-edit-head"><h4><?php echo $this->__('Last 5 Orders') ?></h4></div>
+                    <fieldset class="np"><?php echo $this->getChildHtml('lastOrders'); ?></fieldset>
+                </div></td>
+    	</tr>
+    </table>
+    <table>
         <tr>
             <td><?php echo $this->getChildHtml('sales') ?>
-                <div class="entry-edit">
+              <!--  <div class="lastorders">
                     <div class="entry-edit-head"><h4><?php echo $this->__('Last 5 Orders') ?></h4></div>
                     <fieldset class="np"><?php echo $this->getChildHtml('lastOrders'); ?></fieldset>
                 </div>
-                <?php $roleId = implode('', Mage::getSingleton('admin/session')->getUser()->getRoles());
+                --><?php $roleId = implode('', Mage::getSingleton('admin/session')->getUser()->getRoles());
                       $roleName = Mage::getModel('admin/roles')->load($roleId)->getRoleName();
                       if($roleName!="Siteadmin"){?>
                 <div class="entry-edit">
@@ -117,8 +159,8 @@ function toggleCal(id) {
                 </div>
             </td>
             <?php }?>
-            <td>
-                <div class="entry-edit" style="border:1px solid #ccc;">
+            <!--<td>
+                <div class="dashright" style="border:1px solid #ccc;">
                     <?php echo $this->getChildHtml('diagrams') ?>
                     <?php if (is_array($this->getChild('diagrams')->getTabsIds())) : ?>
                         <div id="diagram_tab_content"></div>
@@ -132,6 +174,6 @@ function toggleCal(id) {
                     </div>
                 </div>
             </td>
-        </tr>
+       </tr> -->
     </table>
 </div>
