--- a/skin/adminhtml/default/cottoncampadmin/reset.css
+++ b/skin/adminhtml/default/cottoncampadmin/reset.css
@@ -27,7 +27,8 @@
 *                       { margin:0; padding:0; }
 
 body                    { background:#e6e6e6; color:#2f2f2f; font:12px/1.5em Arial, Helvetica, sans-serif;  }
-a                       { color:#050FB5; text-decoration:none; }
+
+a                       { color: #ea7601; text-decoration:none; }
 a:hover                 { color:#ea7601; text-decoration:none; }
 a img                   { border:0; }
 :focus                  { outline:0; }
@@ -36,7 +37,7 @@ a img                   { border:0; }
 h1, h2, h3, h4          { margin-bottom:.5em; line-height:1.4em; }
 h2                      { font-size:1.7em; }
 h3                      { margin-bottom:.5em; color:#253033; font-size:1.25em; }
-h4                      { margin-bottom:.6em; color:#494848; font-size:1.05em; }
+h4                      { margin-bottom:.6em; color:#494848; font-size:1.05em;background-color: #547C96;color:#fff;font-size:15px }
 h5                      { font-size:1.05em; }
 h6                      { font-size:1em; }
 h1 a, h1 a:hover, 
