--- a/skin/adminhtml/default/cottoncampadmin/boxes.css
+++ b/skin/adminhtml/default/cottoncampadmin/boxes.css
@@ -1583,25 +1583,26 @@ div.actions:after,
 /* Dash Board Table*/
 .dashboard
 	{
-	width:1000px;
+	width:99%;
 	}
 /*Dash Board  Last 5 orders*/
 
 .lastorders
 {
-    width:700px;
+    width:96%;
     height: 300px;
     margin-left: 20px;
+    
 }
 /*Dash Board  right div */
 
 .dashright
 {
 	border:1px solid #ccc;
-    width:550px;
+    width:94%;
     height:280px;
     padding:0px;
-   margin:18px 10px 18px 0;
+   margin:18px -180px 18px 0;
   
 }
 
@@ -1612,7 +1613,7 @@ div.actions:after,
 	border-width:1px; 
 	border-style:solid; 
 	border-color: #ccc;
-	/*width:500px;*/
+    width:95%;
 	margin:18px;
 	height:280px;
 }
