menu changes added

--- a/app/design/adminhtml/default/cottoncampadmin/template/page/menu.phtml
+++ b/app/design/adminhtml/default/cottoncampadmin/template/page/menu.phtml
@@ -43,7 +43,7 @@ if($roleName=="Administrators"){
 
 <?php echo $this->__('Get help for this page') ?></a>
 <?php } else { ?>
-<a id="page-store-link" href="<?php echo $home_url = Mage::helper('core/url')->getHomeUrl(); ?>">
+<a id="page-store-link" style="color:#ffffff; text-decoration:none;" href="<?php echo $home_url = Mage::helper('core/url')->getHomeUrl(); ?>">
 
 <?php echo $this->__('Store Front') ?></a>
 <?php } ?>
