--- a/skin/frontend/cottoncamp/categorypage/css/styles.css
+++ b/skin/frontend/cottoncamp/categorypage/css/styles.css
@@ -556,7 +556,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* 0 Level */
 #nav li { float:left; }
-#nav li.active a { color:#d96708; }
+#nav li.active a { color:#fff; }
 #nav a { float:left; padding:5px 12px 6px 8px; color:#a7c6dd; font-weight:bold; }
 #nav li.over a,
 #nav a:hover { color:#d96708; }
@@ -1810,7 +1810,7 @@ body { background-color:#1b2940; font:62.5% Georgia,'Times New Roman',serif; let
 .headerimg { background-position: center top; background-repeat: no-repeat; width:100%; height:600px; position:absolute; }
 
 /* NAVIGATION */
-#nav-outer { height:25px; padding-top:0px; position:relative; top:24px; background-image:url(../images/headerbg.png); }
+#nav-outer { height:25px; padding-top:0px; position:relative; top:24px; background-image:url(../images/headerbg.png);width:50%;border-radius:5px 5px 5px 5px; }
 #navigation { height:100px; width:960px; margin:0 auto; background-image:url(../images/logo.png); background-position:top left; background-repeat:no-repeat; }
 
 /* SEARCH */
