--- a/app/design/frontend/cottoncamp/productlist/template/catalog/product/list.phtml
+++ b/app/design/frontend/cottoncamp/productlist/template/catalog/product/list.phtml
@@ -114,8 +114,12 @@ $this->_productCollection
 					$newsFrom= substr($_product->getData('news_from_date'),0,10);
 					$newsTo=  substr($_product->getData('news_to_date'),0,10);
 					if ($now>=$newsFrom && $now<=$newsTo)
-					{?> <div class="new-img">&nbsp;</div><? };
+					{?> <div class="new-img">&nbsp;</div><? }
+					else{?>
+					 <div class="new-img1"></div>
+					<? }
 					?>
+					
 					<!--naujas end--> 
 				<a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(135); ?>" width="135" height="135" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>
                 <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h2>
@@ -129,14 +133,14 @@ $this->_productCollection
                     <?php else: ?>
                         <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                     <?php endif; ?>
-                    <ul class="add-to-links">
+                    <!--<ul class="add-to-links">
                         <?php if ($this->helper('wishlist')->isAllow()) : ?>
                             <li><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a></li>
                         <?php endif; ?>
                         <?php if($_compareUrl=$this->getAddToCompareUrl($_product)): ?>
                             <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>" class="link-compare"><?php echo $this->__('Add to Compare') ?></a></li>
                         <?php endif; ?>
-                    </ul>
+                    </ul>-->
                 </div>
             </li>
         <?php if ($i%$_columnCount==0 || $i==$_collectionSize): ?>
