--- a/app/design/frontend/cottoncamp/productlist/template/catalog/product/view.phtml
+++ b/app/design/frontend/cottoncamp/productlist/template/catalog/product/view.phtml
@@ -88,14 +88,14 @@
 
         <div class="product-img-box">
             <?php echo $this->getChildHtml('media') ?>
-	    <script type="text/javascript">
-		jQuery(document).ready(function(){
-		 var options = {
-               zoomType: 'reverse'
-            }
-            jQuery(".jqzoom").jqzoom(options);
-        });
-    </script>
+<!--	    <script type="text/javascript">-->
+<!--		jQuery(document).ready(function(){-->
+<!--		 var options = {-->
+<!--               zoomType: 'reverse'-->
+<!--            }-->
+<!--            jQuery(".jqzoom").jqzoom(options);-->
+<!--        });-->
+<!--    </script>-->
         </div>
 
         <div class="clearer"></div>
