--- a/app/design/frontend/cottoncamp/productlist/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/cottoncamp/productlist/template/catalog/product/view/media.phtml
@@ -59,16 +59,16 @@
 </script>-->
 <?php else: ?>
 <p class="product-image">
-    <?php
-        $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(300).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
+  <?php
+        $_img = '<a href="'.$this->helper('catalog/image')->init($_product, 'image').'" class="jqzoom" title="Magnified Image"><img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'"/></a>';
+        echo $_helper->productAttribute($_product, $_img, 'image')
     ?>
 </p>
 <?php endif; ?>
 <?php if (count($this->getGalleryImages()) > 0): ?>
-<div class="more-views">
+<div class="clearfix">
     <h2><?php echo $this->__('More Views') ?></h2>
-    <ul>
+    <ul id="thumblist" class="clearfix">
     <?php foreach ($this->getGalleryImages() as $_image): ?>
         <li>
             <a href="#" onclick="popWin('<?php echo $this->getGalleryUrl($_image) ?>', 'gallery', 'width=300,height=300,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes'); return false;" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(66); ?>" width="66" height="66" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" /></a>
