--- a/skin/frontend/cottoncamp/categorypage/css/styles.css
+++ b/skin/frontend/cottoncamp/categorypage/css/styles.css
@@ -1807,7 +1807,7 @@ body { background-color:#1b2940; font:62.5% Georgia,'Times New Roman',serif; let
 
 /* HEADER */
 #header { height:600px; }
-.headerimg {background-repeat: no-repeat; width:100%; height:82%; position:absolute;background-size: 100%; }
+.headerimg {background-repeat: no-repeat; width:100%; height:600px; position:absolute;background-size: 100%; }
 
 /* NAVIGATION */
 #nav-outer { height:25px; padding-top:0px; position:relative; top:24px; background-image:url(../images/headerbg.png);width:50%;border-radius:5px 5px 5px 5px; }
@@ -1826,7 +1826,7 @@ body { background-color:#1b2940; font:62.5% Georgia,'Times New Roman',serif; let
 #menu ul li a:hover { text-decoration:underline; }
 
 /* HEADER TEXT */
-#headertxt { width:100%; margin:0 auto; clear:both; position:relative; top:10px; }
+#headertxt { width:95%; margin:0 auto; clear:both; position:relative; top:10px; }
 #firstline { background-image:url(../images/textbg.png); color:#333; font-size:40px; padding:4px 13px 7px; float:left; display:block; }
 #secondline { background-image:url(../images/textbg.png); color:#CD2B3A; text-decoration:none; font-size:60px; padding:0 13px 10px; float:left; display:block; clear:both; }
 #secondline:hover { text-decoration:underline; color:#7F000C; }
@@ -1845,7 +1845,7 @@ body { background-color:#1b2940; font:62.5% Georgia,'Times New Roman',serif; let
 #headernav-outerleft { position:absolute; top:220px; margin:0 auto; width:27px; border: none; z-index:10; }
 #headernavleft { padding-left:8px; }
 #headernav-outerright { position:absolute; top:220px; margin:0 auto; width:27px; border: none; z-index:10; }
-#headernavright { padding-left:5400%  }
+#headernavright { padding-left:1366px; }
 
 /* CONTENT */
 #content { color:#575757; background-color:#eee; }
@@ -1855,7 +1855,7 @@ body { background-color:#1b2940; font:62.5% Georgia,'Times New Roman',serif; let
 
 /* rightdiv */
 #contentright { color:#575757;}
-.rightdiv{float:right;padding-right:10%;margin-top:0px;}
+.rightdiv{float:right;padding-right:150px;margin-top:0px;}
 ul.vert-two{margin:0;padding:0;list-style-type:none;display:block;font:bold 14px Helvetica, Verdana, Arial, sans-serif;line-height:165%;
 width:125px;}
 ul.vert-two li{margin:0;padding:0;border-top:0px solid #343434;border-bottom:0px solid #343434;width:125px}
