files added for zoom control

--- a/app/design/frontend/cottoncamp/categorypage/template/page/html/header.phtml
+++ b/app/design/frontend/cottoncamp/categorypage/template/page/html/header.phtml
@@ -40,6 +40,7 @@
             <?php echo $this->getChildHtml('topLinks') ?>
             <?php //echo $this->getChildHtml('store_language') ?>
         </div>
+	<?php echo $this->getChildHtml('topBar') ?>
         <?php echo $this->getChildHtml('topContainer'); ?>
     </div>
 </div>
